Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Balneário Camboriú</h1>
-      <h2 class="project-tagline">Balneário Camboriú, SC. Cidade de Santa Catarina conhecida pelas praias e pelos pontos turísticos.</h2>
+      <h2 class="project-tagline">Balneário Camboriú. Cidade de Santa Catarina conhecida pelas praias e pelos pontos turísticos.</h2>
     </section>
 
     <section class="main-content">
@@ -35,6 +35,16 @@
 
     </section>
 
-  
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-71818496-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
